# retail-sales-pipeline

./: Project_Summary.docx  README.md  databricks.yml  pyproject.toml
.github/workflows/: databricks-ci.yml
resources/: bronze_job.yml  gold_job.yml  pipeline_job.yml  silver_job.yml
src/retail_pipeline/: bronze.py  gold.py  silver.py
